--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.12)
 project(MatrixTransform)
 
 # Add the path to the src directory
@@ -7,11 +7,23 @@ include_directories(src)
 # Set the path to the directory containing GLM headers
 set(GLM_INCLUDE_DIR "/opt/homebrew/include")
 
+# Use FetchContent to automatically download cgltf
+include(FetchContent)
+FetchContent_Declare(
+  cgltf
+  GIT_REPOSITORY https://github.com/jkuhlmann/cgltf.git
+  GIT_TAG v1.13  # Adjust the version as needed
+)
+
+# Fetch cgltf at configure time
+FetchContent_MakeAvailable(cgltf)
+
 # Add the source file to the project
 add_executable(MatrixTransform src/main.cpp)
 
 # Include the GLM headers
-target_include_directories(MatrixTransform PRIVATE ${GLM_INCLUDE_DIR})
+# Include the Assimp headers
+target_include_directories(MatrixTransform PRIVATE ${GLM_INCLUDE_DIR} ${cgltf_SOURCE_DIR})
 
-# Link any additional libraries if needed (not required in this example)
-# target_link_libraries(MatrixTransform PRIVATE <additional_libraries>)
+# Set the C++ standard (if needed)
+set(CMAKE_CXX_STANDARD 11)
