ImGui hello window works, new way of adding libs as submodules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - ./wasm:/mnt/wasm:rw
       - ./assets:/mnt/assets:ro
+      - ./external:/mnt/external:ro
       - ./src:/mnt/src:ro
     entrypoint: "bash -c"
     command:
